# mulagent

./: .dockerignore  .gitignore  Dockerfile  MAINTENANCE.md  Makefile  README.md  alembic.ini  mulagent-feishu.service  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
config/: agents.yaml  settings.yaml.example  tools.yaml
config/knowledge/: README.md  architect.md  build_errors.md  code_review.md  cpp.md  database.md  e2e.md  flutter.md  go.md  java.md  kotlin.md  novelist.md  python.md  pytorch.md  refactor.md  rust.md  security.md  tdd.md  typescript.md
config/prompts/: dag_planner.yaml  dispatcher.yaml  quality_check.yaml
docker/: docker-compose.yaml
docs/: architecture.md  architecture.mmd  context-compression.md  dev-architecture.md  system-prompt-analysis.md
openclaw_agents/code_agent/: AGENT.md
scripts/: check_chapter_wordcount.py  detect_redundancy.py  setup.ps1  setup.sh
scripts/hooks/: guard_file.sh  guard_git.sh  guard_shell.sh
src/: main.py
src/agents/: adapter.py  registry.py  skill_acquirer.py  skill_security.py
src/cli/: __init__.py  headless.py  init_wizard.py  main.py  runner.py  tui.py
src/common/: config.py  db.py  llm.py  logging_config.py  observability.py  redis_client.py  retry.py  timing.py  tokenizer.py  trace_context.py  vector.py
src/evolution/: absorber.py  applier.py  controller.py  diagnostician.py  experience.py  feedback.py  feedback_loop.py  prescriber.py  tool_learning.py  trace.py
src/gateway/: adapter.py  feishu_bot.py  routes.py  streaming.py
src/graph/: checkpoint.py  context_compressor.py  (+9 more)
(+60 files in other folders)
